add_executable(benchmarking main.cpp)
target_link_libraries(benchmarking PRIVATE pypp_common)
add_subdirectory(app_empty_vs_pre_init_list)
add_subdirectory(app_list)
add_subdirectory(app_tuple)
add_subdirectory(app_set)
add_subdirectory(app_enumerate)
add_subdirectory(app_zip)
add_subdirectory(app_reversed)