add_executable(random_tests_test main.cpp)
target_link_libraries(random_tests_test PRIVATE pypp_common)
add_subdirectory(app_zip)
add_subdirectory(app_dict)
add_subdirectory(app_printing)
add_subdirectory(app_dependency_management)
add_subdirectory(app_tuple_tests)
add_subdirectory(app_time)
add_subdirectory(app_list_test)
add_subdirectory(app_classes)
add_subdirectory(app_default_dicts)